# kcm_customsounds

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
src/: CMakeLists.txt  CustomSoundsSettings.cpp  CustomSoundsSettings.h  SystemSound.cpp  SystemSound.h  SystemSoundModel.cpp  SystemSoundModel.h  customsoundssettings.cpp  customsoundssettings.h  kcm_customsounds.json
src/ui/: SystemSound.qml  main.qml
